# the_kai_seeker

./: .cursorignore  .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: bootstrap.py  main.py
backend/app/agent_runtime/: __init__.py  base.py  base_system_prompt.py  native.py  native_loop.py  short_term_memory.py  skill_bridge.py  tool_bridge.py  types.py
backend/app/api/: router.py
backend/app/config/: agent_policy.py  settings.py
backend/app/content/: __init__.py
backend/app/content_sync/: __init__.py  base.py  registry.py
backend/app/db/: engine.py
backend/app/extensions/: __init__.py  loader.py
backend/app/models/: __init__.py  agent_runtime.py  conversation.py  long_term_memory.py  pdf_document.py  provider_setting.py  study_target.py
backend/app/providers/: __init__.py  base.py  factory.py  gemini_provider.py  openai_provider.py
backend/app/repositories/: __init__.py  agent_runtime_repo.py  conversation_repo.py  long_term_memory_repo.py  pdf_repo.py  provider_repo.py  study_target_repo.py
backend/app/schemas/: admin.py  chat.py  content.py  health.py  pdf.py  (+1 more)
backend/data/: README.md
backend/scripts/: generate_index.py  run_dev.py
backend/tests/: conftest.py  test_agent_allowed_tools.py  test_agent_runtime_integration.py  test_bootstrap_short_term_memory_migration.py  test_chat_service_session_source.py  test_content_index.py  test_conversation_activity.py  test_gemini_provider.py  test_index_builder.py  test_kai_tool_cli.py  test_pdf_web_tools.py  test_provider_repo.py
backend/user_extensions/: README.md
(+92 files in other folders)
