[project]
name = "the-kai-seeker"
version = "0.1.0"
description = "The Kai Seeker - Local-first open-source study agent for Japanese graduate entrance exam preparation"
requires-python = ">=3.11"
license = "AGPL-3.0-only"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "greenlet>=3.0",
    "aiosqlite>=0.21",
    "httpx>=0.28",
    "python-dotenv>=1.1",
    "python-multipart>=0.0.20",
    "pypdf>=5.0",
    "pymupdf>=1.24",
    "markdownify>=0.13",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
